kcov-out/test.f946d2de3794e49d/parser.zig.a2912cdd.js
var data = {lines:[
{"lineNum":"    1","line":"const std = @import(\"std\");"},
{"lineNum":"    2","line":""},
{"lineNum":"    3","line":"const ast = @import(\"ast.zig\");"},
{"lineNum":"    4","line":"const errs = @import(\"errors.zig\");"},
{"lineNum":"    5","line":"const main = @import(\"main.zig\");"},
{"lineNum":"    6","line":"const _token = @import(\"token.zig\");"},
{"lineNum":"    7","line":""},
{"lineNum":"    8","line":"const AST = ast.AST;"},
{"lineNum":"    9","line":"const Error = errs.Error;"},
{"lineNum":"   10","line":"const String = @import(\"zig-string/zig-string.zig\").String;"},
{"lineNum":"   11","line":"const Token = _token.Token;"},
{"lineNum":"   12","line":"const TokenKind = _token.TokenKind;"},
{"lineNum":"   13","line":""},
{"lineNum":"   14","line":"const ParserErrorEnum = error{"},
{"lineNum":"   15","line":"    parserError, // For general parsing errors. Error is logged in errors.zig.errors. Likely"},
{"lineNum":"   16","line":"    InvalidCharacter, // If parsing a float goes wrong. Likely"},
{"lineNum":"   17","line":"    Overflow, // If parsing an integer goes wrong. Unlikely"},
{"lineNum":"   18","line":""},
{"lineNum":"   19","line":"    OutOfMemory, // Often when appending to an ArrayList, unlikely"},
{"lineNum":"   20","line":"};"},
{"lineNum":"   21","line":""},
{"lineNum":"   22","line":"pub const Parser = struct {"},
{"lineNum":"   23","line":"    tokens: *std.ArrayList(Token),"},
{"lineNum":"   24","line":"    cursor: usize,"},
{"lineNum":"   25","line":"    astAllocator: std.mem.Allocator,"},
{"lineNum":"   26","line":"    errors: *errs.Errors,"},
{"lineNum":"   27","line":""},
{"lineNum":"   28","line":"    pub fn create(tokens: *std.ArrayList(Token), errors: *errs.Errors, astAllocator: std.mem.Allocator) !Parser {","class":"lineCov","hits":"1","order":"1275","possible_hits":"1",},
{"lineNum":"   29","line":"        return .{ //","class":"lineCov","hits":"1","order":"1276","possible_hits":"1",},
{"lineNum":"   30","line":"            .tokens = tokens,"},
{"lineNum":"   31","line":"            .cursor = 0,"},
{"lineNum":"   32","line":"            .astAllocator = astAllocator,"},
{"lineNum":"   33","line":"            .errors = errors,"},
{"lineNum":"   34","line":"        };"},
{"lineNum":"   35","line":"    }"},
{"lineNum":"   36","line":""},
{"lineNum":"   37","line":"    fn peek(self: *Parser) Token {","class":"lineCov","hits":"1","order":"1283","possible_hits":"1",},
{"lineNum":"   38","line":"        return self.tokens.items[self.cursor];","class":"lineCov","hits":"1","order":"1284","possible_hits":"1",},
{"lineNum":"   39","line":"    }"},
{"lineNum":"   40","line":""},
{"lineNum":"   41","line":"    fn peekKind(self: *Parser, kind: TokenKind) bool {","class":"lineCov","hits":"1","order":"1290","possible_hits":"1",},
{"lineNum":"   42","line":"        return self.peek().kind == kind;","class":"lineCov","hits":"1","order":"1291","possible_hits":"1",},
{"lineNum":"   43","line":"    }"},
{"lineNum":"   44","line":""},
{"lineNum":"   45","line":"    fn nextIsExpr(self: *Parser) bool {","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"   46","line":"        const nextKind = self.peek().kind;","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"   47","line":"        return nextKind == .E_MARK //","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"   48","line":"        or nextKind == .Q_MARK //"},
{"lineNum":"   49","line":"        or nextKind == .PERIOD //"},
{"lineNum":"   50","line":"        or nextKind == .AMPERSAND //"},
{"lineNum":"   51","line":"        or nextKind == .L_PAREN //"},
{"lineNum":"   52","line":"        or nextKind == .L_SQUARE //"},
{"lineNum":"   53","line":"        or nextKind == .L_BRACE //"},
{"lineNum":"   54","line":"        or nextKind == .INDENT //"},
{"lineNum":"   55","line":"        or nextKind == .BAR //"},
{"lineNum":"   56","line":"        or nextKind == .MINUS //"},
{"lineNum":"   57","line":"        or nextKind == .CASE //"},
{"lineNum":"   58","line":"        or nextKind == .COND //"},
{"lineNum":"   59","line":"        or nextKind == .FN //"},
{"lineNum":"   60","line":"        or nextKind == .FOR //"},
{"lineNum":"   61","line":"        or nextKind == .IF //"},
{"lineNum":"   62","line":"        or nextKind == .TRY //"},
{"lineNum":"   63","line":"        or nextKind == .UNREACHABLE //"},
{"lineNum":"   64","line":"        or nextKind == .WHILE //"},
{"lineNum":"   65","line":"        or nextKind == .IDENTIFIER //"},
{"lineNum":"   66","line":"        or nextKind == .BIN_INTEGER //"},
{"lineNum":"   67","line":"        or nextKind == .CHAR //"},
{"lineNum":"   68","line":"        or nextKind == .HEX_INTEGER //"},
{"lineNum":"   69","line":"        or nextKind == .DECIMAL_INTEGER //"},
{"lineNum":"   70","line":"        or nextKind == .OCT_INTEGER //"},
{"lineNum":"   71","line":"        or nextKind == .REAL //"},
{"lineNum":"   72","line":"        or nextKind == .STRING;"},
{"lineNum":"   73","line":"    }"},
{"lineNum":"   74","line":""},
{"lineNum":"   75","line":"    fn nextIsStatement(self: *Parser) bool {","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"   76","line":"        const nextKind = self.peek().kind;","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"   77","line":"        return nextKind == .LET or nextKind == .CONST or nextKind == .DEFER or nextKind == .ERRDEFER or self.nextIsExpr();","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"   78","line":"    }"},
{"lineNum":"   79","line":""},
{"lineNum":"   80","line":"    fn accept(self: *Parser, kind: TokenKind) ?Token {","class":"lineCov","hits":"1","order":"1281","possible_hits":"1",},
{"lineNum":"   81","line":"        var token = self.peek();","class":"lineCov","hits":"1","order":"1282","possible_hits":"1",},
{"lineNum":"   82","line":"        if (token.kind == kind) {","class":"lineCov","hits":"1","order":"1285","possible_hits":"1",},
{"lineNum":"   83","line":"            self.cursor += 1;","class":"lineCov","hits":"2","order":"1286","possible_hits":"2",},
{"lineNum":"   84","line":"            return token;","class":"lineCov","hits":"1","order":"1287","possible_hits":"1",},
{"lineNum":"   85","line":"        } else {"},
{"lineNum":"   86","line":"            return null;","class":"lineCov","hits":"1","order":"1288","possible_hits":"1",},
{"lineNum":"   87","line":"        }"},
{"lineNum":"   88","line":"    }"},
{"lineNum":"   89","line":""},
{"lineNum":"   90","line":"    fn expect(self: *Parser, kind: TokenKind) ParserErrorEnum!Token {","class":"lineCov","hits":"1","order":"1299","possible_hits":"1",},
{"lineNum":"   91","line":"        if (self.accept(kind)) |token| {","class":"lineCov","hits":"1","order":"1300","possible_hits":"1",},
{"lineNum":"   92","line":"            return token;","class":"lineCov","hits":"1","order":"1301","possible_hits":"1",},
{"lineNum":"   93","line":"        } else {"},
{"lineNum":"   94","line":"            self.errors.addError(Error{ .expected2Token = .{ .span = self.peek().span, .expected = kind, .got = self.peek().kind } });","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"   95","line":"            return ParserErrorEnum.parserError;","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"   96","line":"            // unreachable;"},
{"lineNum":"   97","line":"        }"},
{"lineNum":"   98","line":"    }"},
{"lineNum":"   99","line":""},
{"lineNum":"  100","line":"    pub fn parse(self: *Parser) ParserErrorEnum!std.ArrayList(*AST) {","class":"lineCov","hits":"1","order":"1278","possible_hits":"1",},
{"lineNum":"  101","line":"        var decls = std.ArrayList(*AST).init(self.astAllocator);","class":"lineCov","hits":"1","order":"1279","possible_hits":"1",},
{"lineNum":"  102","line":"        while (self.accept(.NEWLINE)) |_| {}","class":"lineCov","hits":"1","order":"1280","possible_hits":"1",},
{"lineNum":"  103","line":"        while (!self.peekKind(.EOF)) {","class":"lineCov","hits":"1","order":"1289","possible_hits":"1",},
{"lineNum":"  104","line":"            try decls.append(try self.topLevelDeclaration());","class":"linePartCov","hits":"1","order":"1292","possible_hits":"2",},
{"lineNum":"  105","line":"            while (self.accept(.NEWLINE)) |_| {}","class":"lineCov","hits":"2","order":"1483","possible_hits":"2",},
{"lineNum":"  106","line":"        }"},
{"lineNum":"  107","line":"        _ = try self.expect(.EOF);","class":"lineCov","hits":"1","order":"1484","possible_hits":"1",},
{"lineNum":"  108","line":"        return decls;","class":"lineCov","hits":"1","order":"1485","possible_hits":"1",},
{"lineNum":"  109","line":"    }"},
{"lineNum":"  110","line":""},
{"lineNum":"  111","line":"    fn topLevelDeclaration(self: *Parser) ParserErrorEnum!*AST {","class":"lineCov","hits":"1","order":"1293","possible_hits":"1",},
{"lineNum":"  112","line":"        if (self.peekKind(.FN)) {","class":"lineCov","hits":"1","order":"1294","possible_hits":"1",},
{"lineNum":"  113","line":"            return try self.fnDeclaration();","class":"linePartCov","hits":"1","order":"1670","possible_hits":"2",},
{"lineNum":"  114","line":"        } else if (self.peekKind(.CONST)) {","class":"lineCov","hits":"1","order":"1295","possible_hits":"1",},
{"lineNum":"  115","line":"            return try self.constDeclaration();","class":"linePartCov","hits":"1","order":"1296","possible_hits":"2",},
{"lineNum":"  116","line":"        } else {"},
{"lineNum":"  117","line":"            self.errors.addError(Error{ .expectedBasicToken = .{ .span = self.peek().span, .expected = \"`fn` or `const`\", .got = self.peek().kind } });","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"  118","line":"            return ParserErrorEnum.parserError;","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"  119","line":"        }"},
{"lineNum":"  120","line":"    }"},
{"lineNum":"  121","line":""},
{"lineNum":"  122","line":"    fn nonFnDeclaration(self: *Parser) ParserErrorEnum!*AST {","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"  123","line":"        if (self.peekKind(.LET)) {","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"  124","line":"            return try self.letDeclaration();","class":"lineNoCov","hits":"0","possible_hits":"2",},
{"lineNum":"  125","line":"        } else if (self.peekKind(.CONST)) {","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"  126","line":"            return try self.constDeclaration();","class":"lineNoCov","hits":"0","possible_hits":"2",},
{"lineNum":"  127","line":"        } else {"},
{"lineNum":"  128","line":"            self.errors.addError(Error{ .expectedBasicToken = .{ .span = self.peek().span, .expected = \"`let` or `const`\", .got = self.peek().kind } });","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"  129","line":"            return ParserErrorEnum.parserError;","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"  130","line":"        }"},
{"lineNum":"  131","line":"    }"},
{"lineNum":"  132","line":""},
{"lineNum":"  133","line":"    fn constDeclaration(self: *Parser) ParserErrorEnum!*AST {","class":"lineCov","hits":"1","order":"1297","possible_hits":"1",},
{"lineNum":"  134","line":"        var token = try self.expect(.CONST);","class":"lineCov","hits":"1","order":"1298","possible_hits":"1",},
{"lineNum":"  135","line":"        var ident = try AST.createIdentifier(try self.expect(.IDENTIFIER), self.astAllocator);","class":"lineCov","hits":"1","order":"1302","possible_hits":"1",},
{"lineNum":"  136","line":"        var _type: ?*AST = null;","class":"lineCov","hits":"1","order":"1341","possible_hits":"1",},
{"lineNum":"  137","line":""},
{"lineNum":"  138","line":"        if (self.accept(.COLON)) |_| {","class":"lineCov","hits":"1","order":"1342","possible_hits":"1",},
{"lineNum":"  139","line":"            _type = try self.arrowExpr();","class":"lineCov","hits":"1","order":"1343","possible_hits":"1",},
{"lineNum":"  140","line":"        }"},
{"lineNum":"  141","line":"        _ = try self.expect(.EQUALS);","class":"lineCov","hits":"1","order":"1426","possible_hits":"1",},
{"lineNum":"  142","line":"        var init = try self.expr();","class":"lineCov","hits":"1","order":"1427","possible_hits":"1",},
{"lineNum":"  143","line":"        if (!self.peekKind(.EOF)) {","class":"lineCov","hits":"1","order":"1478","possible_hits":"1",},
{"lineNum":"  144","line":"            _ = try self.expect(.NEWLINE);","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"  145","line":"        }"},
{"lineNum":"  146","line":""},
{"lineNum":"  147","line":"        return try AST.createDecl(","class":"linePartCov","hits":"1","order":"1479","possible_hits":"2",},
{"lineNum":"  148","line":"            token,"},
{"lineNum":"  149","line":"            ident,"},
{"lineNum":"  150","line":"            _type,"},
{"lineNum":"  151","line":"            init,"},
{"lineNum":"  152","line":"            self.astAllocator,","class":"lineCov","hits":"1","order":"1480","possible_hits":"1",},
{"lineNum":"  153","line":"        );"},
{"lineNum":"  154","line":"    }"},
{"lineNum":"  155","line":""},
{"lineNum":"  156","line":"    fn letDeclaration(self: *Parser) ParserErrorEnum!*AST {","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"  157","line":"        var definitelyLet = try self.expect(.LET);","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"  158","line":"        var maybeMut = self.accept(.MUT);","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"  159","line":"        var ident = try AST.createIdentifier(try self.expect(.IDENTIFIER), self.astAllocator);","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"  160","line":"        var _type: ?*AST = null;","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"  161","line":"        var init: ?*AST = null;","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"  162","line":""},
{"lineNum":"  163","line":"        if (self.accept(.COLON)) |_| {","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"  164","line":"            _type = try self.arrowExpr();","class":"lineNoCov","hits":"0","possible_hits":"2",},
{"lineNum":"  165","line":"            if (self.peekKind(.EQUALS)) {","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"  166","line":"                _ = try self.expect(.EQUALS);","class":"lineNoCov","hits":"0","possible_hits":"2",},
{"lineNum":"  167","line":"                init = try self.expr();","class":"lineNoCov","hits":"0","possible_hits":"2",},
{"lineNum":"  168","line":"            }"},
{"lineNum":"  169","line":"        } else if (self.accept(.EQUALS)) |_| {","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"  170","line":"            init = try self.expr();","class":"lineNoCov","hits":"0","possible_hits":"2",},
{"lineNum":"  171","line":"        } else {"},
{"lineNum":"  172","line":"            self.errors.addError(Error{ .basic = .{ .span = self.peek().span, .msg = \"variable declarations require at least a type or an intial value\" } });","class":"lineNoCov","hits":"0","possible_hits":"2",},
{"lineNum":"  173","line":"        }"},
{"lineNum":"  174","line":""},
{"lineNum":"  175","line":"        return try AST.createDecl(","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"  176","line":"            if (maybeMut) |mut| mut else definitelyLet,","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"  177","line":"            ident,"},
{"lineNum":"  178","line":"            _type,"},
{"lineNum":"  179","line":"            init,"},
{"lineNum":"  180","line":"            self.astAllocator,","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"  181","line":"        );"},
{"lineNum":"  182","line":"    }"},
{"lineNum":"  183","line":""},
{"lineNum":"  184","line":"    fn fnDeclaration(self: *Parser) ParserErrorEnum!*AST {","class":"lineCov","hits":"1","order":"1671","possible_hits":"1",},
{"lineNum":"  185","line":"        var introducer = try self.expect(.FN);","class":"lineCov","hits":"1","order":"1672","possible_hits":"1",},
{"lineNum":"  186","line":"        var maybeIdent: ?*AST = null;","class":"lineCov","hits":"1","order":"1673","possible_hits":"1",},
{"lineNum":"  187","line":""},
{"lineNum":"  188","line":"        if (self.accept(.IDENTIFIER)) |token| {","class":"lineCov","hits":"1","order":"1674","possible_hits":"1",},
{"lineNum":"  189","line":"            maybeIdent = try AST.createIdentifier(token, self.astAllocator);","class":"linePartCov","hits":"1","order":"1675","possible_hits":"2",},
{"lineNum":"  190","line":"            _ = try self.expect(.COLON);","class":"linePartCov","hits":"1","order":"1676","possible_hits":"2",},
{"lineNum":"  191","line":"        }"},
{"lineNum":"  192","line":"        var params = try self.paramlist();","class":"lineCov","hits":"1","order":"1677","possible_hits":"1",},
{"lineNum":"  193","line":"        _ = try self.expect(.RIGHT_SKINNY_ARROW);","class":"lineCov","hits":"1","order":"1698","possible_hits":"1",},
{"lineNum":"  194","line":"        var retType = try self.arrowExpr();","class":"lineCov","hits":"1","order":"1699","possible_hits":"1",},
{"lineNum":"  195","line":""},
{"lineNum":"  196","line":"        var refinement: ?*AST = null;","class":"lineCov","hits":"1","order":"1700","possible_hits":"1",},
{"lineNum":"  197","line":"        if (self.accept(.WHERE)) |_| {","class":"lineCov","hits":"1","order":"1701","possible_hits":"1",},
{"lineNum":"  198","line":"            _ = try self.arrowExpr();","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"  199","line":"        }"},
{"lineNum":"  200","line":""},
{"lineNum":"  201","line":"        _ = try self.expect(.EQUALS);","class":"lineCov","hits":"1","order":"1702","possible_hits":"1",},
{"lineNum":"  202","line":"        var init = try self.expr();","class":"lineCov","hits":"1","order":"1703","possible_hits":"1",},
{"lineNum":"  203","line":""},
{"lineNum":"  204","line":"        return try AST.createFnDecl(","class":"linePartCov","hits":"1","order":"1704","possible_hits":"2",},
{"lineNum":"  205","line":"            introducer,"},
{"lineNum":"  206","line":"            maybeIdent,"},
{"lineNum":"  207","line":"            params,"},
{"lineNum":"  208","line":"            retType,"},
{"lineNum":"  209","line":"            refinement,"},
{"lineNum":"  210","line":"            init,"},
{"lineNum":"  211","line":"            self.astAllocator,","class":"lineCov","hits":"1","order":"1705","possible_hits":"1",},
{"lineNum":"  212","line":"        );"},
{"lineNum":"  213","line":"    }"},
{"lineNum":"  214","line":""},
{"lineNum":"  215","line":"    fn paramlist(self: *Parser) ParserErrorEnum!std.ArrayList(*AST) {","class":"lineCov","hits":"1","order":"1678","possible_hits":"1",},
{"lineNum":"  216","line":"        var params = std.ArrayList(*AST).init(self.astAllocator);","class":"lineCov","hits":"1","order":"1679","possible_hits":"1",},
{"lineNum":"  217","line":"        errdefer params.deinit();","class":"lineNoCov","hits":"0","possible_hits":"6",},
{"lineNum":"  218","line":""},
{"lineNum":"  219","line":"        _ = try self.expect(.L_PAREN);","class":"linePartCov","hits":"1","order":"1680","possible_hits":"2",},
{"lineNum":"  220","line":"        if (self.peekKind(.CONST) or self.peekKind(.MUT) or self.peekKind(.IDENTIFIER)) {","class":"lineCov","hits":"1","order":"1681","possible_hits":"1",},
{"lineNum":"  221","line":"            try params.append(try self.param());","class":"linePartCov","hits":"1","order":"1682","possible_hits":"4",},
{"lineNum":"  222","line":"            if (self.accept(.COMMA)) |_| {","class":"lineCov","hits":"1","order":"1695","possible_hits":"1",},
{"lineNum":"  223","line":"                try params.append(try self.param());","class":"lineNoCov","hits":"0","possible_hits":"4",},
{"lineNum":"  224","line":"            }"},
{"lineNum":"  225","line":"        }"},
{"lineNum":"  226","line":"        _ = try self.expect(.R_PAREN);","class":"linePartCov","hits":"1","order":"1696","possible_hits":"2",},
{"lineNum":"  227","line":""},
{"lineNum":"  228","line":"        return params;","class":"lineCov","hits":"1","order":"1697","possible_hits":"1",},
{"lineNum":"  229","line":"    }"},
{"lineNum":"  230","line":""},
{"lineNum":"  231","line":"    fn param(self: *Parser) ParserErrorEnum!*AST {","class":"lineCov","hits":"1","order":"1683","possible_hits":"1",},
{"lineNum":"  232","line":"        var introducer: ?Token = self.accept(.MUT) orelse self.accept(.CONST);","class":"lineCov","hits":"1","order":"1684","possible_hits":"1",},
{"lineNum":"  233","line":"        var ident = try AST.createIdentifier(try self.expect(.IDENTIFIER), self.astAllocator);","class":"lineCov","hits":"1","order":"1685","possible_hits":"1",},
{"lineNum":"  234","line":"        _ = try self.expect(.COLON);","class":"lineCov","hits":"1","order":"1686","possible_hits":"1",},
{"lineNum":"  235","line":"        var paramType = try self.annotExpr();","class":"lineCov","hits":"1","order":"1687","possible_hits":"1",},
{"lineNum":"  236","line":"        var init: ?*AST = null;","class":"lineCov","hits":"1","order":"1688","possible_hits":"1",},
{"lineNum":"  237","line":"        if (self.accept(.BACK_SLASH)) |_| {","class":"lineCov","hits":"1","order":"1689","possible_hits":"1",},
{"lineNum":"  238","line":"            init = try self.arrowExpr();","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"  239","line":"        }"},
{"lineNum":"  240","line":""},
{"lineNum":"  241","line":"        return try AST.createDecl(","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"  242","line":"            if (introducer) |i| i else .{ .kind = .LET, .data = \"let\", .span = ident.getToken().span },","class":"lineCov","hits":"1","order":"1690","possible_hits":"1",},
{"lineNum":"  243","line":"            ident,"},
{"lineNum":"  244","line":"            paramType,"},
{"lineNum":"  245","line":"            init,"},
{"lineNum":"  246","line":"            self.astAllocator,","class":"lineCov","hits":"1","order":"1694","possible_hits":"1",},
{"lineNum":"  247","line":"        );"},
{"lineNum":"  248","line":"    }"},
{"lineNum":"  249","line":""},
{"lineNum":"  250","line":"    fn statement(self: *Parser) ParserErrorEnum!*AST {","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"  251","line":"        if (self.peekKind(.CONST) or self.peekKind(.LET)) {","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"  252","line":"            return self.nonFnDeclaration();","class":"lineNoCov","hits":"0","possible_hits":"2",},
{"lineNum":"  253","line":"        } else if (self.accept(.DEFER)) |token| {","class":"lineNoCov","hits":"0","possible_hits":"2",},
{"lineNum":"  254","line":"            return try AST.createDefer(token, try self.expr(), self.astAllocator);","class":"lineNoCov","hits":"0","possible_hits":"2",},
{"lineNum":"  255","line":"        } else if (self.accept(.ERRDEFER)) |token| {","class":"lineNoCov","hits":"0","possible_hits":"2",},
{"lineNum":"  256","line":"            return try AST.createDefer(token, try self.expr(), self.astAllocator);","class":"lineNoCov","hits":"0","possible_hits":"2",},
{"lineNum":"  257","line":"        } else {"},
{"lineNum":"  258","line":"            var exp = try self.expr();","class":"lineNoCov","hits":"0","possible_hits":"2",},
{"lineNum":"  259","line":"            if (self.accept(.EQUALS)) |token| {","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"  260","line":"                return try AST.createAssign(token, exp, try self.expr(), self.astAllocator);","class":"lineNoCov","hits":"0","possible_hits":"2",},
{"lineNum":"  261","line":"            } else if (self.accept(.PLUS_EQUALS)) |token| {","class":"lineNoCov","hits":"0","possible_hits":"2",},
{"lineNum":"  262","line":"                return try AST.createAssign(token, exp, try self.expr(), self.astAllocator);","class":"lineNoCov","hits":"0","possible_hits":"2",},
{"lineNum":"  263","line":"            } else if (self.accept(.MINUS_EQUALS)) |token| {","class":"lineNoCov","hits":"0","possible_hits":"2",},
{"lineNum":"  264","line":"                return try AST.createAssign(token, exp, try self.expr(), self.astAllocator);","class":"lineNoCov","hits":"0","possible_hits":"2",},
{"lineNum":"  265","line":"            } else if (self.accept(.STAR_EQUALS)) |token| {","class":"lineNoCov","hits":"0","possible_hits":"2",},
{"lineNum":"  266","line":"                return try AST.createAssign(token, exp, try self.expr(), self.astAllocator);","class":"lineNoCov","hits":"0","possible_hits":"2",},
{"lineNum":"  267","line":"            } else if (self.accept(.SLASH_EQUALS)) |token| {","class":"lineNoCov","hits":"0","possible_hits":"2",},
{"lineNum":"  268","line":"                return try AST.createAssign(token, exp, try self.expr(), self.astAllocator);","class":"lineNoCov","hits":"0","possible_hits":"2",},
{"lineNum":"  269","line":"            } else if (self.accept(.PERCENT_EQUALS)) |token| {","class":"lineNoCov","hits":"0","possible_hits":"2",},
{"lineNum":"  270","line":"                return try AST.createAssign(token, exp, try self.expr(), self.astAllocator);","class":"lineNoCov","hits":"0","possible_hits":"2",},
{"lineNum":"  271","line":"            } else if (self.accept(.D_STAR_EQUALS)) |token| {","class":"lineNoCov","hits":"0","possible_hits":"2",},
{"lineNum":"  272","line":"                return try AST.createAssign(token, exp, try self.expr(), self.astAllocator);","class":"lineNoCov","hits":"0","possible_hits":"2",},
{"lineNum":"  273","line":"            } else {"},
{"lineNum":"  274","line":"                return exp;","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"  275","line":"            }"},
{"lineNum":"  276","line":"        }"},
{"lineNum":"  277","line":"    }"},
{"lineNum":"  278","line":""},
{"lineNum":"  279","line":"    fn expr(self: *Parser) ParserErrorEnum!*AST {","class":"lineCov","hits":"1","order":"1428","possible_hits":"1",},
{"lineNum":"  280","line":"        if (self.peekKind(.FN)) {","class":"lineCov","hits":"1","order":"1429","possible_hits":"1",},
{"lineNum":"  281","line":"            return self.fnDeclaration();","class":"lineNoCov","hits":"0","possible_hits":"2",},
{"lineNum":"  282","line":"        } else if (self.peekKind(.COND)) {","class":"lineCov","hits":"1","order":"1430","possible_hits":"1",},
{"lineNum":"  283","line":"            return self.condExpr();","class":"lineNoCov","hits":"0","possible_hits":"2",},
{"lineNum":"  284","line":"        } else if (self.peekKind(.CASE)) {","class":"lineCov","hits":"1","order":"1431","possible_hits":"1",},
{"lineNum":"  285","line":"            return self.caseExpr();","class":"lineNoCov","hits":"0","possible_hits":"2",},
{"lineNum":"  286","line":"        } else {"},
{"lineNum":"  287","line":"            return self.sumType();","class":"lineCov","hits":"2","order":"1432","possible_hits":"2",},
{"lineNum":"  288","line":"        }"},
{"lineNum":"  289","line":"    }"},
{"lineNum":"  290","line":""},
{"lineNum":"  291","line":"    fn sumType(self: *Parser) ParserErrorEnum!*AST {","class":"lineCov","hits":"1","order":"1433","possible_hits":"1",},
{"lineNum":"  292","line":"        var exp = try self.productExpr();","class":"lineCov","hits":"1","order":"1434","possible_hits":"1",},
{"lineNum":"  293","line":"        while (self.accept(.BAR)) |token| {","class":"lineCov","hits":"1","order":"1476","possible_hits":"1",},
{"lineNum":"  294","line":"            exp = try AST.createBinop(token, exp, try self.annotExpr(), self.astAllocator);","class":"lineNoCov","hits":"0","possible_hits":"1",},
{"lineNum":"  295","line":"        }"},
{"lineNum":"  296","line":"        return exp;","class":"lineCov","hits":"1","order":"1477","possible_hits":"1",},
{"lineNum":"  297","line":"    }"},
{"lineNum":"  298","line":""},
